# agent-skills

./: .gitignore  AGENTS.md  Makefile  README.md
.githooks/: pre-commit
.github/workflows/: agent-image-opt-release.yml
skills/agent-image-optimizer/: README.md  SKILL.md
skills/agent-image-optimizer/scripts/: install.sh
skills/design/apple-design/: README.md
skills/development/codex-git-cicd/: README.md  SKILL.md
skills/development/fireworks-tech-graph/: README.md  SKILL.md  UPSTREAM.md
skills/development/karpathy-guidelines/: README.md
skills/development/optimize-prompt-stack/: README.md
skills/game/img2threejs/: README.md  SKILL.md  bike-demo.html  demo.html  index.html
skills/ip-cover-designer/: SKILL.md
skills/ip-cover-designer/agents/: openai.yaml
skills/ip-cover-designer/references/: cover-specs.md
skills/ip-promo-poster/: SKILL.md
skills/ip-promo-poster/agents/: openai.yaml
skills/ip-promo-poster/references/: promo-specs.md
skills/ip-visual-designer/: SKILL.md
skills/ip-visual-designer/agents/: openai.yaml
skills/ip-visual-designer/references/: ip-brief-template.md  prompt-patterns.md  visual-specs.md
skills/ip-visual-identity/: SKILL.md
skills/ip-visual-identity/agents/: openai.yaml
skills/ip-visual-identity/references/: ip-brief-template.md
skills/karpathy-guidelines/: README.md  SKILL.md
skills/optimize-prompt-stack/: README.md  SKILL.md
tools/agent-image-opt/: Cargo.toml  Makefile  README.md
tools/agent-image-opt/scripts/: install.ps1
tools/agent-image-opt/src/: main.rs
(+28 files in other folders)
