[package]
name = "agent-image-opt"
version = "0.1.0"
edition = "2024"
description = "Lossless and lossy optimization for AI agent image artifacts"
license = "MIT"

[[bin]]
name = "agent-image-opt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png", "webp"] }
oxipng = { version = "10.1.1", default-features = false, features = ["parallel", "zopfli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
walkdir = "2.5"
webp = "0.3.1"
